--- a/.github/workflows/create_repo.yml
+++ b/.github/workflows/create_repo.yml
@@ -3,11 +3,11 @@ on:
   workflow_dispatch:
   push:
 jobs:
-  Explore-GitHub-Actions:
+  create-test-case:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: apt-get install moreutils
+      - run: sudo apt-get install -y moreutils
       - run: bash create_repo.sh
       - run: yarn workspace @onboarding/frontend start --open none &
       - run: sleep 5
