--- a/.github/workflows/create_repo.yml
+++ b/.github/workflows/create_repo.yml
@@ -6,7 +6,12 @@ jobs:
   create-test-case:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14.17.3'
+      - run: npm install -g yarn@1.22.5
       - uses: actions/checkout@v2
+      - run: sudo apt-get update -y
       - run: sudo apt-get install -y moreutils
       - run: bash create_repo.sh
       - run: yarn workspace @onboarding/frontend start --open none &
