--- a/.github/workflows/create_repo.yml
+++ b/.github/workflows/create_repo.yml
@@ -22,7 +22,8 @@ jobs:
           echo "{}" | jq '.name="@onboarding/utils" | .main="src/addOne.ts"' > utils/package.json
 
       - name: Tell yarn that we have two workspaces, frontend and utils
-        run: cat package.json | jq '.workspaces=["frontend", "utils"] | .devDependencies.typescript="=4.4.4" | .name="@onboarding/root"' | sponge package.json
+        # run: cat package.json | jq '.workspaces=["frontend", "utils"] | .devDependencies.typescript="=4.4.4" | .name="@onboarding/root"' | sponge package.json
+        run: cat package.json | jq
 
       - name: Create typescript files
         run: |
