run full commands

--- a/.github/workflows/create_repo.yml
+++ b/.github/workflows/create_repo.yml
@@ -39,14 +39,12 @@ jobs:
         run: yarn create snowpack-app frontend --template @snowpack/app-template-react-typescript --use-yarn --no-install --no-git
 
       - name: Modify the generated files a touch
-        # run: |
-        #   cat frontend/tsconfig.json | yarn dlx strip-json-comments-cli | jq '.extends="../tsconfig.base.json" | .compilerOptions.noEmit=false' | sponge frontend/tsconfig.json
-        #   cat frontend/package.json | yarn dlx strip-json-comments-cli | jq '.name="@onboarding/frontend" | .devDependencies.typescript="=4.4.4"' | sponge frontend/package.json
         run: |
-          cat frontend/tsconfig.json | yarn dlx --quiet strip-json-comments-cli | jq '.extends="../tsconfig.base.json" | .compilerOptions.noEmit=false' 
+          cat frontend/tsconfig.json | yarn dlx --quiet strip-json-comments-cli | jq '.extends="../tsconfig.base.json" | .compilerOptions.noEmit=false' | sponge frontend/tsconfig.json
+          cat frontend/package.json | yarn dlx --quiet strip-json-comments-cli | jq '.name="@onboarding/frontend" | .devDependencies.typescript="=4.4.4"' | sponge frontend/package.json
 
-      # - name: Install pnpify
-      #   run: yarn workspace @onboarding/frontend add -D @yarnpkg/pnpify
+      - name: Install pnpify
+        run: yarn workspace @onboarding/frontend add -D @yarnpkg/pnpify
 
       # # - uses: actions/checkout@v2
       # - run: bash create_repo.sh
