Fix sed for reals

--- a/.github/workflows/create_repo.yml
+++ b/.github/workflows/create_repo.yml
@@ -49,24 +49,17 @@ jobs:
       - name: Set workspaceRoot in the snowpack config file
         run: |
           cat frontend/snowpack.config.mjs
-          echo "----------------"
-          sed -i 's/export default {/export default { workspaceRoot: "..",/' frontend/snowpack.config.mjs
-          echo "----------------"
           cat frontend/snowpack.config.mjs
 
       - name: Have the frontend use the utils function
         run: |
           yarn workspace @onboarding/frontend add @onboarding/utils
           cat frontend/tsconfig.json | yarn dlx --quiet strip-json-comments-cli | jq '.references=[{"path": "../utils"}]' | sponge frontend/tsconfig.json
-          echo "import { addOne } from '@onboarding/utils';" | cat - frontend/src/App.tsx | tee frontend/src/App.tsx
-          cat frontend/src/App.tsx
-          echo "----------------"
+          sed -i "1 s/^/import { addOne } from '@onboarding\/utils';\n/" frontend/src/App.tsx
           sed -i 's/count + 1/addOne\(count\)/' frontend/src/App.tsx 
-          echo "----------------"
-          cat frontend/src/App.tsx
 
-      # - name: Build typescript
-      #   run: yarn tsc --build --verbose
+      - name: Build typescript
+        run: yarn tsc --build --verbose
 
       # # - uses: actions/checkout@v2
       # - run: bash create_repo.sh
