Try starting the server

--- a/.github/workflows/create_repo.yml
+++ b/.github/workflows/create_repo.yml
@@ -61,15 +61,16 @@ jobs:
       - name: Build typescript
         run: yarn tsc --build --verbose
 
-      # # - uses: actions/checkout@v2
-      # - run: bash create_repo.sh
-      # - run: yarn workspace @onboarding/frontend start --open none &
-      # - run: sleep 5
-      # - run: |
-      #     readonly status_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/)
-      #     if [ "$status_code" = "200" ]; then
-      #         echo "Server queried successfully"
-      #     else
-      #         echo "Found invalid status code $status_code"
-      #         exit 1
-      #     fi
+      - name: Start up the server
+        run: yarn workspace @onboarding/frontend start --open none &
+
+      - name: Test that we can talk to the server
+        run: |
+          sleep 5
+          readonly status_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/)
+          if [ "$status_code" = "200" ]; then
+              echo "Server queried successfully"
+          else
+              echo "Found invalid status code $status_code"
+              exit 1
+          fi
